[package]
name = "humanize-duration"
version = "0.0.4"
edition = "2021"
description = "Convert time Duration to human readable format"
license = "MIT"
authors = ["Alessandro Crugnola <alessandro.crugnola@gmail.com>"]
repository = "https://github.com/sephiroth74/humanize-duration"
homepage = "https://github.com/sephiroth74/humanize-duration"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
chrono = ["dep:chrono"]

[dependencies]
time = "0.3.31"
chrono = { version = "0.4.31", optional = true }
